--- a/VPN-classification-via-classical-methods.ipynb
+++ b/VPN-classification-via-classical-methods.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 69,
    "id": "352b90c4",
    "metadata": {},
    "outputs": [],
@@ -19,12 +19,13 @@
     "import pandas as pd # Библиотека для работы с фреймворками\n",
     "import matplotlib.pyplot as plt # Библиотека для визуализации данных\n",
     "import seaborn as sns # Библиотека для визуализации данных\n",
-    "import numpy as np # Библиотека для математических операций"
+    "import numpy as np # Библиотека для математических операций\n",
+    "from sklearn.preprocessing import LabelEncoder # Инструмент разметки текстовых данных"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 70,
    "id": "75ad7b10",
    "metadata": {},
    "outputs": [
@@ -104,7 +105,7 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "51bbf708-3a2c-4ab4-b329-971bc144ae53",
+       "ref": "32989bb2-a95b-4752-a454-8359d91d1974",
        "rows": [
         [
          "0",
@@ -327,7 +328,7 @@
        "4  2781012822  1856855904  PSH-ACK      1313   HTTPS      1  "
       ]
      },
-     "execution_count": 21,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -340,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 71,
    "id": "b561dba2",
    "metadata": {},
    "outputs": [
@@ -381,7 +382,345 @@
    "id": "f56486c2",
    "metadata": {},
    "source": [
-    "### Графический анализ табличных данных"
+    "### Предобработка табличных данных"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "id": "5a1c7275",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
+       "columns": [
+        {
+         "name": "index",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "Version",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "Protocol",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "TTL",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "SrcAddress",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "DestAddress",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "SrcPort",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "DestPort",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "SeqNum",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "AckNum",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "Flag",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "DataSize",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "Service",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "Label",
+         "rawType": "int64",
+         "type": "integer"
+        }
+       ],
+       "conversionMethod": "pd.DataFrame",
+       "ref": "f8178d7c-90a4-4f8f-81cd-380427af47db",
+       "rows": [
+        [
+         "0",
+         "4",
+         "6",
+         "236",
+         "56",
+         "0",
+         "443",
+         "38334",
+         "2781011508",
+         "1856855387",
+         "4",
+         "0",
+         "1",
+         "1"
+        ],
+        [
+         "1",
+         "4",
+         "6",
+         "229",
+         "132",
+         "0",
+         "443",
+         "36674",
+         "2683269580",
+         "686503037",
+         "4",
+         "0",
+         "1",
+         "1"
+        ],
+        [
+         "2",
+         "4",
+         "6",
+         "236",
+         "56",
+         "0",
+         "443",
+         "38334",
+         "2781011509",
+         "1856855904",
+         "0",
+         "0",
+         "1",
+         "1"
+        ],
+        [
+         "3",
+         "4",
+         "6",
+         "236",
+         "56",
+         "0",
+         "443",
+         "38334",
+         "2781011509",
+         "1856855904",
+         "0",
+         "1313",
+         "1",
+         "1"
+        ],
+        [
+         "4",
+         "4",
+         "6",
+         "236",
+         "56",
+         "0",
+         "443",
+         "38334",
+         "2781012822",
+         "1856855904",
+         "3",
+         "1313",
+         "1",
+         "1"
+        ]
+       ],
+       "shape": {
+        "columns": 13,
+        "rows": 5
+       }
+      },
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Version</th>\n",
+       "      <th>Protocol</th>\n",
+       "      <th>TTL</th>\n",
+       "      <th>SrcAddress</th>\n",
+       "      <th>DestAddress</th>\n",
+       "      <th>SrcPort</th>\n",
+       "      <th>DestPort</th>\n",
+       "      <th>SeqNum</th>\n",
+       "      <th>AckNum</th>\n",
+       "      <th>Flag</th>\n",
+       "      <th>DataSize</th>\n",
+       "      <th>Service</th>\n",
+       "      <th>Label</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>4</td>\n",
+       "      <td>6</td>\n",
+       "      <td>236</td>\n",
+       "      <td>56</td>\n",
+       "      <td>0</td>\n",
+       "      <td>443</td>\n",
+       "      <td>38334</td>\n",
+       "      <td>2781011508</td>\n",
+       "      <td>1856855387</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>4</td>\n",
+       "      <td>6</td>\n",
+       "      <td>229</td>\n",
+       "      <td>132</td>\n",
+       "      <td>0</td>\n",
+       "      <td>443</td>\n",
+       "      <td>36674</td>\n",
+       "      <td>2683269580</td>\n",
+       "      <td>686503037</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>4</td>\n",
+       "      <td>6</td>\n",
+       "      <td>236</td>\n",
+       "      <td>56</td>\n",
+       "      <td>0</td>\n",
+       "      <td>443</td>\n",
+       "      <td>38334</td>\n",
+       "      <td>2781011509</td>\n",
+       "      <td>1856855904</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>6</td>\n",
+       "      <td>236</td>\n",
+       "      <td>56</td>\n",
+       "      <td>0</td>\n",
+       "      <td>443</td>\n",
+       "      <td>38334</td>\n",
+       "      <td>2781011509</td>\n",
+       "      <td>1856855904</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1313</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>6</td>\n",
+       "      <td>236</td>\n",
+       "      <td>56</td>\n",
+       "      <td>0</td>\n",
+       "      <td>443</td>\n",
+       "      <td>38334</td>\n",
+       "      <td>2781012822</td>\n",
+       "      <td>1856855904</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1313</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Version  Protocol  TTL  SrcAddress  DestAddress  SrcPort  DestPort  \\\n",
+       "0        4         6  236          56            0      443     38334   \n",
+       "1        4         6  229         132            0      443     36674   \n",
+       "2        4         6  236          56            0      443     38334   \n",
+       "3        4         6  236          56            0      443     38334   \n",
+       "4        4         6  236          56            0      443     38334   \n",
+       "\n",
+       "       SeqNum      AckNum  Flag  DataSize  Service  Label  \n",
+       "0  2781011508  1856855387     4         0        1      1  \n",
+       "1  2683269580   686503037     4         0        1      1  \n",
+       "2  2781011509  1856855904     0         0        1      1  \n",
+       "3  2781011509  1856855904     0      1313        1      1  \n",
+       "4  2781012822  1856855904     3      1313        1      1  "
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Разметка ряда столбцов\n",
+    "le = LabelEncoder()\n",
+    "df['SrcAddress'] = le.fit_transform(df['SrcAddress'])\n",
+    "df['DestAddress'] = le.fit_transform(df['DestAddress'])\n",
+    "df['Flag'] = le.fit_transform(df['Flag'])\n",
+    "df['Service'] = le.fit_transform(df['Service'])\n",
+    "df.head()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a0112ed5",
+   "metadata": {},
+   "source": [
+    "### Обучение и проверка моделей"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "22adbdde",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Модель на основе "
    ]
   }
  ],
