--- a/VPN-classification-via-classical-methods.ipynb
+++ b/VPN-classification-via-classical-methods.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 73,
    "id": "352b90c4",
    "metadata": {},
    "outputs": [],
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 74,
    "id": "75ad7b10",
    "metadata": {},
    "outputs": [
@@ -105,7 +105,7 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "32989bb2-a95b-4752-a454-8359d91d1974",
+       "ref": "f35c371f-8271-46e9-870e-7d5459176f50",
        "rows": [
         [
          "0",
@@ -328,7 +328,7 @@
        "4  2781012822  1856855904  PSH-ACK      1313   HTTPS      1  "
       ]
      },
-     "execution_count": 70,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -341,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 75,
    "id": "b561dba2",
    "metadata": {},
    "outputs": [
@@ -387,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 76,
    "id": "5a1c7275",
    "metadata": {},
    "outputs": [
@@ -467,7 +467,7 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "f8178d7c-90a4-4f8f-81cd-380427af47db",
+       "ref": "41d15d1f-308b-4c23-8d61-f7e48cfcabf9",
        "rows": [
         [
          "0",
@@ -690,7 +690,7 @@
        "4  2781012822  1856855904     3      1313        1      1  "
       ]
      },
-     "execution_count": 72,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -710,12 +710,12 @@
    "id": "a0112ed5",
    "metadata": {},
    "source": [
-    "### Обучение и проверка моделей"
+    "### Обучение и проверка моделей на основе LogisticRegression, KNN, RandomForestTree"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 77,
    "id": "22adbdde",
    "metadata": {},
    "outputs": [],
