--- a/VPN-classification-via-classical-methods.ipynb
+++ b/VPN-classification-via-classical-methods.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 111,
    "id": "352b90c4",
    "metadata": {},
    "outputs": [],
@@ -20,12 +20,13 @@
     "import matplotlib.pyplot as plt # Библиотека для визуализации данных\n",
     "import seaborn as sns # Библиотека для визуализации данных\n",
     "import numpy as np # Библиотека для математических операций\n",
-    "from sklearn.preprocessing import LabelEncoder # Инструмент разметки текстовых данных"
+    "from sklearn.preprocessing import LabelEncoder # Инструмент разметки текстовых данных в таблице\n",
+    "from sklearn.model_selection import train_test_split # Инструмент разбивки на тренировочную и тестовую выборки"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 112,
    "id": "75ad7b10",
    "metadata": {},
    "outputs": [
@@ -105,7 +106,7 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "f35c371f-8271-46e9-870e-7d5459176f50",
+       "ref": "6ab82db2-ece3-48ac-a10e-e28dea185d5e",
        "rows": [
         [
          "0",
@@ -328,7 +329,7 @@
        "4  2781012822  1856855904  PSH-ACK      1313   HTTPS      1  "
       ]
      },
-     "execution_count": 74,
+     "execution_count": 112,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -341,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 113,
    "id": "b561dba2",
    "metadata": {},
    "outputs": [
@@ -387,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 114,
    "id": "5a1c7275",
    "metadata": {},
    "outputs": [
@@ -467,7 +468,7 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "41d15d1f-308b-4c23-8d61-f7e48cfcabf9",
+       "ref": "40ad3729-d3f9-4785-90eb-21ed3a7b3d47",
        "rows": [
         [
          "0",
@@ -690,7 +691,7 @@
        "4  2781012822  1856855904     3      1313        1      1  "
       ]
      },
-     "execution_count": 76,
+     "execution_count": 114,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -702,7 +703,30 @@
     "df['DestAddress'] = le.fit_transform(df['DestAddress'])\n",
     "df['Flag'] = le.fit_transform(df['Flag'])\n",
     "df['Service'] = le.fit_transform(df['Service'])\n",
-    "df.head()\n"
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 115,
+   "id": "6eddb066",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Разбиение таблицы на матрицу признаков и объектов\n",
+    "X_data = df.iloc[:,:-1].to_numpy() # массив признаков\n",
+    "Y_data = df['Label'].to_numpy() # массив объектов"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 116,
+   "id": "32e4ccb5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Разбиение на тренировочную и тестовую выборки\n",
+    "X_train, X_test, Y_train, Y_test = train_test_split(X_data, Y_data, train_size=0.33, shuffle=True, random_state=18)"
    ]
   },
   {
@@ -715,12 +739,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": null,
    "id": "22adbdde",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Модель на основе "
+    "# Модель на основе LogisticRegression"
    ]
   }
  ],
