--- a/VPN-classification-via-classical-methods.ipynb
+++ b/VPN-classification-via-classical-methods.ipynb
@@ -744,7 +744,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Модель на основе LogisticRegression"
+    "# Модель на основе LogisticRegression без регуляризации"
    ]
   }
  ],
