--- a/VPN-classification-via-classical-methods.ipynb
+++ b/VPN-classification-via-classical-methods.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 118,
    "id": "352b90c4",
    "metadata": {},
    "outputs": [],
@@ -21,12 +21,13 @@
     "import seaborn as sns # Библиотека для визуализации данных\n",
     "import numpy as np # Библиотека для математических операций\n",
     "from sklearn.preprocessing import LabelEncoder # Инструмент разметки текстовых данных в таблице\n",
-    "from sklearn.model_selection import train_test_split # Инструмент разбивки на тренировочную и тестовую выборки"
+    "from sklearn.model_selection import train_test_split # Инструмент разбивки на тренировочную и тестовую выборки\n",
+    "from sklearn.linear_model import LogisticRegression # Алгоритм "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 119,
    "id": "75ad7b10",
    "metadata": {},
    "outputs": [
@@ -106,7 +107,7 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "6ab82db2-ece3-48ac-a10e-e28dea185d5e",
+       "ref": "14ab20e3-21a3-48ee-90b2-dd4b16e99134",
        "rows": [
         [
          "0",
@@ -329,7 +330,7 @@
        "4  2781012822  1856855904  PSH-ACK      1313   HTTPS      1  "
       ]
      },
-     "execution_count": 112,
+     "execution_count": 119,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -342,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 120,
    "id": "b561dba2",
    "metadata": {},
    "outputs": [
@@ -388,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 121,
    "id": "5a1c7275",
    "metadata": {},
    "outputs": [
@@ -468,7 +469,7 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "40ad3729-d3f9-4785-90eb-21ed3a7b3d47",
+       "ref": "fac6059f-b527-4d32-a22a-d3dcd11f470d",
        "rows": [
         [
          "0",
@@ -691,7 +692,7 @@
        "4  2781012822  1856855904     3      1313        1      1  "
       ]
      },
-     "execution_count": 114,
+     "execution_count": 121,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -708,7 +709,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 122,
    "id": "6eddb066",
    "metadata": {},
    "outputs": [],
@@ -720,7 +721,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 123,
    "id": "32e4ccb5",
    "metadata": {},
    "outputs": [],
@@ -742,9 +743,19 @@
    "execution_count": null,
    "id": "22adbdde",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (3648851252.py, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "  \u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[124]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[31m    \u001b[39m\u001b[31mmodel_LR_None =\u001b[39m\n                    ^\n\u001b[31mSyntaxError\u001b[39m\u001b[31m:\u001b[39m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
-    "# Модель на основе LogisticRegression без регуляризации"
+    "# Модель на основе LogisticRegression без регуляризации\n",
+    "model_LR_None = LogisticRegression()"
    ]
   }
  ],
