--- a/VPN-classification-via-classical-methods.ipynb
+++ b/VPN-classification-via-classical-methods.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 125,
    "id": "352b90c4",
    "metadata": {},
    "outputs": [],
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 126,
    "id": "75ad7b10",
    "metadata": {},
    "outputs": [
@@ -107,7 +107,7 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "14ab20e3-21a3-48ee-90b2-dd4b16e99134",
+       "ref": "0eeb2f77-a518-4adb-851a-c7e0d2536efe",
        "rows": [
         [
          "0",
@@ -330,7 +330,7 @@
        "4  2781012822  1856855904  PSH-ACK      1313   HTTPS      1  "
       ]
      },
-     "execution_count": 119,
+     "execution_count": 126,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -343,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 127,
    "id": "b561dba2",
    "metadata": {},
    "outputs": [
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 128,
    "id": "5a1c7275",
    "metadata": {},
    "outputs": [
@@ -469,7 +469,7 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "fac6059f-b527-4d32-a22a-d3dcd11f470d",
+       "ref": "1655a634-e4da-4c76-8875-d7273da4b408",
        "rows": [
         [
          "0",
@@ -692,7 +692,7 @@
        "4  2781012822  1856855904     3      1313        1      1  "
       ]
      },
-     "execution_count": 121,
+     "execution_count": 128,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -709,7 +709,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 129,
    "id": "6eddb066",
    "metadata": {},
    "outputs": [],
@@ -721,7 +721,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 130,
    "id": "32e4ccb5",
    "metadata": {},
    "outputs": [],
@@ -743,19 +743,11 @@
    "execution_count": null,
    "id": "22adbdde",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (3648851252.py, line 2)",
-     "output_type": "error",
-     "traceback": [
-      "  \u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[124]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[31m    \u001b[39m\u001b[31mmodel_LR_None =\u001b[39m\n                    ^\n\u001b[31mSyntaxError\u001b[39m\u001b[31m:\u001b[39m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Модель на основе LogisticRegression без регуляризации\n",
-    "model_LR_None = LogisticRegression()"
+    "# Модель на основе LogisticRegression с L1-оптимизацией\n",
+    "model_LR_L1 = LogisticRegression(penalty='L1', random_state=18, solver='saga', max_iter=1000) # Инициализация модели\n",
+    "model_LR_L1.fit(X_train, Y_train) # Обучение модели"
    ]
   }
  ],
