--- a/VPN-classification-via-classical-methods.ipynb
+++ b/VPN-classification-via-classical-methods.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 146,
    "id": "352b90c4",
    "metadata": {},
    "outputs": [],
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 147,
    "id": "75ad7b10",
    "metadata": {},
    "outputs": [
@@ -107,7 +107,7 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "0eeb2f77-a518-4adb-851a-c7e0d2536efe",
+       "ref": "9d71e6d8-3868-4bb8-8cc4-ecc49c77947c",
        "rows": [
         [
          "0",
@@ -330,7 +330,7 @@
        "4  2781012822  1856855904  PSH-ACK      1313   HTTPS      1  "
       ]
      },
-     "execution_count": 126,
+     "execution_count": 147,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -343,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 148,
    "id": "b561dba2",
    "metadata": {},
    "outputs": [
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 149,
    "id": "5a1c7275",
    "metadata": {},
    "outputs": [
@@ -469,7 +469,7 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "1655a634-e4da-4c76-8875-d7273da4b408",
+       "ref": "3a081b48-275a-4c2c-91bf-1b78c6bd67fd",
        "rows": [
         [
          "0",
@@ -692,7 +692,7 @@
        "4  2781012822  1856855904     3      1313        1      1  "
       ]
      },
-     "execution_count": 128,
+     "execution_count": 149,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -709,7 +709,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 150,
    "id": "6eddb066",
    "metadata": {},
    "outputs": [],
@@ -721,7 +721,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 151,
    "id": "32e4ccb5",
    "metadata": {},
    "outputs": [],
@@ -746,8 +746,9 @@
    "outputs": [],
    "source": [
     "# Модель на основе LogisticRegression с L1-оптимизацией\n",
-    "model_LR_L1 = LogisticRegression(penalty='L1', random_state=18, solver='saga', max_iter=1000) # Инициализация модели\n",
-    "model_LR_L1.fit(X_train, Y_train) # Обучение модели"
+    "model_LR_L1 = LogisticRegression(penalty='l1', random_state=18, solver='saga', max_iter=10000) # Инициализация модели\n",
+    "model_LR_L1.fit(X_train, Y_train) # Обучение модели\n",
+    "Y_pred = model_LR_L1.predict(X_test)"
    ]
   }
  ],
