--- a/VPN-classification-via-classical-methods.ipynb
+++ b/VPN-classification-via-classical-methods.ipynb
@@ -746,7 +746,7 @@
    "outputs": [],
    "source": [
     "# Модель на основе LogisticRegression с L1-оптимизацией\n",
-    "model_LR_L1 = LogisticRegression(penalty='l1', random_state=18, solver='saga', max_iter=10000) # Инициализация модели\n",
+    "model_LR_L1 = LogisticRegression(penalty='l1', random_state=18, solver='saga', max_iter=10**6) # Инициализация модели\n",
     "model_LR_L1.fit(X_train, Y_train) # Обучение модели\n",
     "Y_pred = model_LR_L1.predict(X_test)"
    ]
