--- a/VPN-classification-via-classical-methods.ipynb
+++ b/VPN-classification-via-classical-methods.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": null,
    "id": "352b90c4",
    "metadata": {},
    "outputs": [],
@@ -22,12 +22,13 @@
     "import numpy as np # Библиотека для математических операций\n",
     "from sklearn.preprocessing import LabelEncoder # Инструмент разметки текстовых данных в таблице\n",
     "from sklearn.model_selection import train_test_split # Инструмент разбивки на тренировочную и тестовую выборки\n",
-    "from sklearn.linear_model import LogisticRegression # Алгоритм "
+    "from sklearn.linear_model import LogisticRegression # Алгоритм логистической регрессии\n",
+    "from slkearn.metrics import r2_score # r2-коэффициент"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 2,
    "id": "75ad7b10",
    "metadata": {},
    "outputs": [
@@ -107,7 +108,7 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "9d71e6d8-3868-4bb8-8cc4-ecc49c77947c",
+       "ref": "aba19826-30a0-475a-a9ff-2a797449566b",
        "rows": [
         [
          "0",
@@ -330,7 +331,7 @@
        "4  2781012822  1856855904  PSH-ACK      1313   HTTPS      1  "
       ]
      },
-     "execution_count": 147,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -343,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 3,
    "id": "b561dba2",
    "metadata": {},
    "outputs": [
@@ -389,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 4,
    "id": "5a1c7275",
    "metadata": {},
    "outputs": [
@@ -469,7 +470,7 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "3a081b48-275a-4c2c-91bf-1b78c6bd67fd",
+       "ref": "fa473a38-8b4d-4b57-b6a8-26720754cf9a",
        "rows": [
         [
          "0",
@@ -692,7 +693,7 @@
        "4  2781012822  1856855904     3      1313        1      1  "
       ]
      },
-     "execution_count": 149,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -709,7 +710,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 5,
    "id": "6eddb066",
    "metadata": {},
    "outputs": [],
@@ -721,7 +722,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 6,
    "id": "32e4ccb5",
    "metadata": {},
    "outputs": [],
@@ -748,7 +749,7 @@
     "# Модель на основе LogisticRegression с L1-оптимизацией\n",
     "model_LR_L1 = LogisticRegression(penalty='l1', random_state=18, solver='saga', max_iter=10**6) # Инициализация модели\n",
     "model_LR_L1.fit(X_train, Y_train) # Обучение модели\n",
-    "Y_pred = model_LR_L1.predict(X_test)"
+    "Y_pred = model_LR_L1.predict(X_test)\n"
    ]
   }
  ],
