--- a/VPN-classification-via-classical-methods.ipynb
+++ b/VPN-classification-via-classical-methods.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "352b90c4",
    "metadata": {},
    "outputs": [],
@@ -23,12 +23,12 @@
     "from sklearn.preprocessing import LabelEncoder # Инструмент разметки текстовых данных в таблице\n",
     "from sklearn.model_selection import train_test_split # Инструмент разбивки на тренировочную и тестовую выборки\n",
     "from sklearn.linear_model import LogisticRegression # Алгоритм логистической регрессии\n",
-    "from slkearn.metrics import r2_score # r2-коэффициент"
+    "from sklearn.metrics import r2_score # r2-коэффициент"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "id": "75ad7b10",
    "metadata": {},
    "outputs": [
@@ -108,7 +108,7 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "aba19826-30a0-475a-a9ff-2a797449566b",
+       "ref": "154c7eb1-5f1a-42f2-befc-25f221fef614",
        "rows": [
         [
          "0",
@@ -331,7 +331,7 @@
        "4  2781012822  1856855904  PSH-ACK      1313   HTTPS      1  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -344,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "id": "b561dba2",
    "metadata": {},
    "outputs": [
@@ -390,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "id": "5a1c7275",
    "metadata": {},
    "outputs": [
@@ -470,7 +470,7 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "fa473a38-8b4d-4b57-b6a8-26720754cf9a",
+       "ref": "8fb1b25b-18fc-4b9a-83f6-0cc0447b0683",
        "rows": [
         [
          "0",
@@ -693,7 +693,7 @@
        "4  2781012822  1856855904     3      1313        1      1  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -710,7 +710,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
    "id": "6eddb066",
    "metadata": {},
    "outputs": [],
@@ -722,7 +722,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 17,
    "id": "32e4ccb5",
    "metadata": {},
    "outputs": [],
@@ -749,7 +749,8 @@
     "# Модель на основе LogisticRegression с L1-оптимизацией\n",
     "model_LR_L1 = LogisticRegression(penalty='l1', random_state=18, solver='saga', max_iter=10**6) # Инициализация модели\n",
     "model_LR_L1.fit(X_train, Y_train) # Обучение модели\n",
-    "Y_pred = model_LR_L1.predict(X_test)\n"
+    "Y_pred = model_LR_L1.predict(X_test) # Тестирование модели\n",
+    "r2_model_LR_L1 = r2_score(Y_test,Y_pred) # Оценка модели с помощью r2-коэффициента"
    ]
   }
  ],
